bin_PROGRAMS =
lib_LTLIBRARIES =

if DOUBLE
lib_LTLIBRARIES += lib{{PACKAGE_TARNAME}}.la
if STANDALONE
bin_PROGRAMS += {{PACKAGE_TARNAME}}
endif
endif

if SINGLE
lib_LTLIBRARIES += lib{{PACKAGE_TARNAME}}-single.la
if STANDALONE
bin_PROGRAMS += {{PACKAGE_TARNAME}}-single
endif
endif

AM_CXXFLAGS = -include {{PACKAGE_TARNAME}}.hpp -DBOOST_MATH_NO_LONG_DOUBLE_MATH_FUNCTIONS=1
# ^ BOOST_MATH_NO_LONG_DOUBLE_MATH_FUNCTIONS set to avoid valgrind issues

lib{{PACKAGE_CANONICAL_NAME}}_la_CPPFLAGS = $(AM_CPPFLAGS) -DNUMBIRCH_REAL=double
lib{{PACKAGE_CANONICAL_NAME}}_la_LDFLAGS = $(AM_LDFLAGS) -release $(PACKAGE_VERSION)
lib{{PACKAGE_CANONICAL_NAME}}_la_LIBADD = $(DOUBLE_LIBS)
lib{{PACKAGE_CANONICAL_NAME}}_la_SOURCES = $(COMMON_SOURCES)

lib{{PACKAGE_CANONICAL_NAME}}_single_la_CPPFLAGS = $(AM_CPPFLAGS) -DNUMBIRCH_REAL=float
lib{{PACKAGE_CANONICAL_NAME}}_single_la_LDFLAGS = $(AM_LDFLAGS) -release $(PACKAGE_VERSION)
lib{{PACKAGE_CANONICAL_NAME}}_single_la_LIBADD = $(SINGLE_LIBS)
lib{{PACKAGE_CANONICAL_NAME}}_single_la_SOURCES = $(COMMON_SOURCES)

{{PACKAGE_CANONICAL_NAME}}_CPPFLAGS = $(AM_CPPFLAGS) -DNUMBIRCH_REAL=double
{{PACKAGE_CANONICAL_NAME}}_LDFLAGS = $(AM_LDFLAGS) -all-static
{{PACKAGE_CANONICAL_NAME}}_LDADD = $(DOUBLE_LIBS) $(STANDALONE_LIBS)
{{PACKAGE_CANONICAL_NAME}}_SOURCES = $(COMMON_SOURCES) {{PACKAGE_TARNAME}}-standalone.cpp

{{PACKAGE_CANONICAL_NAME}}_single_CPPFLAGS = $(AM_CPPFLAGS) -DNUMBIRCH_REAL=float
{{PACKAGE_CANONICAL_NAME}}_single_LDFLAGS = $(AM_LDFLAGS) -all-static
{{PACKAGE_CANONICAL_NAME}}_single_LDADD = $(SINGLE_LIBS) $(STANDALONE_LIBS)
{{PACKAGE_CANONICAL_NAME}}_single_SOURCES = $(COMMON_SOURCES) {{PACKAGE_TARNAME}}-standalone.cpp

BUILT_SOURCES =
CLEANFILES = $(BUILT_SOURCES)
