lib_LTLIBRARIES =

if DEBUG
lib_LTLIBRARIES += libPACKAGE_TARNAME-debug.la
if SINGLE
lib_LTLIBRARIES += libPACKAGE_TARNAME-debug-single.la
endif
endif

if TEST
lib_LTLIBRARIES += libPACKAGE_TARNAME-test.la
if SINGLE
lib_LTLIBRARIES += libPACKAGE_TARNAME-test-single.la
endif
endif

if RELEASE
lib_LTLIBRARIES += libPACKAGE_TARNAME.la
if SINGLE
lib_LTLIBRARIES += libPACKAGE_TARNAME-single.la
endif
endif

COMMON_CXXFLAGS = -Wall \
    $(OPENMP_CXXFLAGS) \
    -DBOOST_MATH_NO_LONG_DOUBLE_MATH_FUNCTIONS=1 \
    -include PACKAGE_TARNAME.hpp
# ^ Boost long double functions can cause issues with valgrind

libPACKAGE_CANONICAL_NAME_debug_la_CXXFLAGS = $(COMMON_CXXFLAGS) -O -g -flto
libPACKAGE_CANONICAL_NAME_debug_la_LIBADD = $(BIRCH_DEBUG_LIBS) $(DEBUG_LIBS)
libPACKAGE_CANONICAL_NAME_debug_la_SOURCES = $(COMMON_SOURCES)

libPACKAGE_CANONICAL_NAME_test_la_CXXFLAGS = $(COMMON_CXXFLAGS) -O -g -flto --coverage
libPACKAGE_CANONICAL_NAME_test_la_LIBADD = $(BIRCH_TEST_LIBS) $(TEST_LIBS)
libPACKAGE_CANONICAL_NAME_test_la_SOURCES = $(COMMON_SOURCES)

libPACKAGE_CANONICAL_NAME_la_CPPFLAGS = -DNDEBUG
libPACKAGE_CANONICAL_NAME_la_CXXFLAGS = $(COMMON_CXXFLAGS) -O3 -flto
libPACKAGE_CANONICAL_NAME_la_LIBADD = $(BIRCH_RELEASE_LIBS) $(RELEASE_LIBS)
libPACKAGE_CANONICAL_NAME_la_SOURCES = $(COMMON_SOURCES)

libPACKAGE_CANONICAL_NAME_debug_single_la_CPPFLAGS = -DBIRCH_SINGLE
libPACKAGE_CANONICAL_NAME_debug_single_la_CXXFLAGS = $(COMMON_CXXFLAGS) -O -g -flto
libPACKAGE_CANONICAL_NAME_debug_single_la_LIBADD = $(BIRCH_DEBUG_SINGLE_LIBS) $(DEBUG_LIBS)
libPACKAGE_CANONICAL_NAME_debug_single_la_SOURCES = $(COMMON_SOURCES)

libPACKAGE_CANONICAL_NAME_test_single_la_CPPFLAGS = -DBIRCH_SINGLE
libPACKAGE_CANONICAL_NAME_test_single_la_CXXFLAGS = $(COMMON_CXXFLAGS) -O -g -flto --coverage
libPACKAGE_CANONICAL_NAME_test_single_la_LIBADD = $(BIRCH_TEST_SINGLE_LIBS) $(TEST_LIBS)
libPACKAGE_CANONICAL_NAME_test_single_la_SOURCES = $(COMMON_SOURCES)

libPACKAGE_CANONICAL_NAME_single_la_CPPFLAGS = -DBIRCH_SINGLE -DNDEBUG
libPACKAGE_CANONICAL_NAME_single_la_CXXFLAGS = $(COMMON_CXXFLAGS) -O3 -flto
libPACKAGE_CANONICAL_NAME_single_la_LIBADD = $(BIRCH_RELEASE_SINGLE_LIBS) $(RELEASE_LIBS)
libPACKAGE_CANONICAL_NAME_single_la_SOURCES = $(COMMON_SOURCES)

BUILT_SOURCES =
CLEANFILES = $(BUILT_SOURCES)
