lib_LTLIBRARIES =

if DEBUG
lib_LTLIBRARIES += libPACKAGE_TARNAME-debug.la
if SINGLE
lib_LTLIBRARIES += libPACKAGE_TARNAME-debug-single.la
endif
endif

if TEST
lib_LTLIBRARIES += libPACKAGE_TARNAME-test.la
if SINGLE
lib_LTLIBRARIES += libPACKAGE_TARNAME-test-single.la
endif
endif

if RELEASE
lib_LTLIBRARIES += libPACKAGE_TARNAME.la
if SINGLE
lib_LTLIBRARIES += libPACKAGE_TARNAME-single.la
endif
endif

COMMON_CXXFLAGS = -Wall \
    $(OPENMP_CXXFLAGS) \
    -DBOOST_MATH_NO_LONG_DOUBLE_MATH_FUNCTIONS=1 \
    -include PACKAGE_TARNAME.hpp
# ^ Boost long double functions can cause issues with valgrind

libPACKAGE_CANONICAL_NAME_debug_la_CXXFLAGS = $(COMMON_CXXFLAGS) -O0 -fno-inline -g
libPACKAGE_CANONICAL_NAME_debug_la_LIBADD = $(DEBUG_LIBS)
libPACKAGE_CANONICAL_NAME_debug_la_SOURCES = $(COMMON_SOURCES)

libPACKAGE_CANONICAL_NAME_test_la_CXXFLAGS = $(COMMON_CXXFLAGS) -O0 -fno-inline -g --coverage
libPACKAGE_CANONICAL_NAME_test_la_LIBADD = $(TEST_LIBS)
libPACKAGE_CANONICAL_NAME_test_la_SOURCES = $(COMMON_SOURCES)

libPACKAGE_CANONICAL_NAME_la_CPPFLAGS = -DNDEBUG
libPACKAGE_CANONICAL_NAME_la_CXXFLAGS = $(COMMON_CXXFLAGS) -O3 -flto
libPACKAGE_CANONICAL_NAME_la_LIBADD = $(RELEASE_LIBS)
libPACKAGE_CANONICAL_NAME_la_SOURCES = $(COMMON_SOURCES)

libPACKAGE_CANONICAL_NAME_debug_single_la_CPPFLAGS = -DNUMBIRCH_REAL=float
libPACKAGE_CANONICAL_NAME_debug_single_la_CXXFLAGS = $(COMMON_CXXFLAGS) -O0 -fno-inline -g
libPACKAGE_CANONICAL_NAME_debug_single_la_LIBADD = $(DEBUG_SINGLE_LIBS)
libPACKAGE_CANONICAL_NAME_debug_single_la_SOURCES = $(COMMON_SOURCES)

libPACKAGE_CANONICAL_NAME_test_single_la_CPPFLAGS = -DNUMBIRCH_REAL=float
libPACKAGE_CANONICAL_NAME_test_single_la_CXXFLAGS = $(COMMON_CXXFLAGS) -O0 -fno-inline -g --coverage
libPACKAGE_CANONICAL_NAME_test_single_la_LIBADD = $(TEST_SINGLE_LIBS)
libPACKAGE_CANONICAL_NAME_test_single_la_SOURCES = $(COMMON_SOURCES)

libPACKAGE_CANONICAL_NAME_single_la_CPPFLAGS = -DNUMBIRCH_REAL=float -DNDEBUG
libPACKAGE_CANONICAL_NAME_single_la_CXXFLAGS = $(COMMON_CXXFLAGS) -O3 -flto
libPACKAGE_CANONICAL_NAME_single_la_LIBADD = $(RELEASE_SINGLE_LIBS)
libPACKAGE_CANONICAL_NAME_single_la_SOURCES = $(COMMON_SOURCES)

BUILT_SOURCES =
CLEANFILES = $(BUILT_SOURCES)
