lib_LTLIBRARIES =

if DOUBLE
lib_LTLIBRARIES += libPACKAGE_TARNAME.la
endif

if SINGLE
lib_LTLIBRARIES += libPACKAGE_TARNAME-single.la
endif

AM_CXXFLAGS = $(OPENMP_CXXFLAGS) -include PACKAGE_TARNAME.hpp

libPACKAGE_CANONICAL_NAME_la_CPPFLAGS = $(AM_CPPFLAGS) -DNUMBIRCH_REAL=double
libPACKAGE_CANONICAL_NAME_la_LIBADD = $(DOUBLE_LIBS)
libPACKAGE_CANONICAL_NAME_la_SOURCES = $(COMMON_SOURCES)

libPACKAGE_CANONICAL_NAME_single_la_CPPFLAGS = $(AM_CPPFLAGS) -DNUMBIRCH_REAL=float
libPACKAGE_CANONICAL_NAME_single_la_LIBADD = $(SINGLE_LIBS)
libPACKAGE_CANONICAL_NAME_single_la_SOURCES = $(COMMON_SOURCES)

BUILT_SOURCES =
CLEANFILES = $(BUILT_SOURCES)
